--- a/css/main.css
+++ b/css/main.css
@@ -419,12 +419,14 @@ footer p {
 /* 반응형제작
 해상도 가로 960px 이하일 때 적용되는 스타일 */
 
-@media screen and (max-with: 1280px) {
+@media screen and (max-width: 1280px) {
     /* 브라우저 너비 1280px이하일 때 스타일 */
     header div {width: 100%;}
     .main_visual .title {width: 100%;}
     .best_v .cont {width: 100%;}
+    .best_v .cont .info {width: 100%;}
     .motion .motion_cont .list_cont.on {width: 100%;}
+    .motion .motion_cont .list_cont.on .items {width: 100%;}
     .g_ver02 .em {width: 100%; display: block;}
     .g_ver02 .cont {width: 100%;}
     .about .cont {width: 100%;}
@@ -446,16 +448,50 @@ footer p {
         margin: 0 auto; 
         margin-bottom: 20px;
     }
+    .motion .list_cont.on .items .info {width: 100%;}
     .g_ver02 .cont {flex-wrap:wrap ;}
     .g_ver02 .cont .items {
-        width: 49%;
+        width: 100%;
         margin: 0 auto;
-        margin-bottom: 20px;
+        margin-bottom: 40px;
+    }
+    .g_ver02 .cont .items figure {
+        width: 100%;
     }
     .about .cont {flex-wrap: wrap;}
     .about .cont .info {
         width: 95%;
+        
         margin: 0 auto;
     }
     body {overflow-x: hidden;}
 } /* 해상도 960px 이하 */
+
+@media screen and  (max-width:640px) {
+    section .title h3 {
+        font-size: 30px !important;
+    }
+    section .title p {
+        font-size: 16px !important;
+    }
+    section .info h4 {
+        font-size: 22px !important;
+    }
+    .main_visual .title h2 {
+        font-size: 40px;
+    }
+    
+    .g_ver02 .cont .items figure {
+        height: 300px;
+    }
+    .about .cont .info div h4 {margin-bottom: 10px;}
+    .about .cont .info div p {
+        font-size: 16px;
+    }
+    .about .cont .info div dl dt {
+        font-size: 16px;
+    }
+    .about .cont .info div dl dd {
+        font-size: 16px;
+    }
+} /* 해상도 640px 이하 */
