--- a/css/main.css
+++ b/css/main.css
@@ -438,6 +438,7 @@ footer p {
     .best_v .cont .info {
         width: 90%; 
         margin: 0 auto;
+        padding-top: 20px;
     }
     .best_v .cont .info p:nth-of-type(2) {margin: 10px 0 20px;}
     .motion .list {flex-wrap: wrap;}
