--- a/css/main.css
+++ b/css/main.css
@@ -102,7 +102,7 @@ header div a i {
 }
 .best_v .title p {
     font-size: 20px;
-    font-family: 'IM_Hyemin-Bold';
+    font-family: 'paybooc-Bold';
 }
 .best_v .cont {
     width: 1280px;
@@ -134,9 +134,6 @@ header div a i {
     font-size: 30px;
     margin-bottom: 5px;
 }
-.best_v .cont .info p {
-    font-family: 'IM_Hyemin-Bold';
-}
 .best_v .cont .info p:nth-of-type(2) {
     margin-top: 20px;
     margin-bottom: 40px; 
@@ -157,7 +154,7 @@ header div a i {
     font-family: 'SuncheonB';
 }
 .best_v .cont .info dl dd {
-    font-family: 'IM_Hyemin-Bold';
+    font-family: 'Cafe24Ssurround';
 }
 .best_v .cont .info ul {
     display: flex;
@@ -198,7 +195,7 @@ header div a i {
 }
 .motion .title p {
     font-size: 20px;
-    font-family: 'IM_Hyemin-Bold';
+    font-family: 'paybooc-Bold';
 }
 .motion .list {
     display: flex;
@@ -233,11 +230,15 @@ header div a i {
 }
 .motion .motion_cont .list_cont.on {
     display: flex;
+    flex-wrap: wrap;
+    width: 80%;
+    
 }
 .motion .motion_cont .list_cont .items {
     width: 49%;
     border: 1px solid #ccc;
     box-sizing: border-box;  /* 가로,세로,테두리 모두 포함한 길이를 포함 */
+    margin-bottom:20px ;
 }
 
 /* 유튜브 영상 크기 조절 */
@@ -258,6 +259,7 @@ header div a i {
 }
 
 /* .motion (.motion_cont 생략) .list_cont .items .info */
+
 .motion .list_cont .items .info {
     padding: 30px;
 }
@@ -279,7 +281,7 @@ header div a i {
     font-family: 'SuncheonB';
 }
 .motion .list_cont .items .info dl dd {
-    font-family: 'IM_Hyemin-Bold';
+    font-family: 'Cafe24Ssurround';
 }
 .motion .list_cont .items .info dl dd:hover a {
     text-decoration: underline;
@@ -297,7 +299,7 @@ header div a i {
 }
 .g_ver02 .title p {
     font-size: 20px;
-    font-family: 'IM_Hyemin-Bold';
+    font-family: 'paybooc-Bold';
 }
 .g_ver02 .em {
     width: 1280px;
@@ -340,7 +342,7 @@ header div a i {
 .g_ver02 .cont .info p {
     font-size: 14px;
     margin-bottom: 15px;
-    font-family: 'IM_Hyemin-Bold';
+    font-family: 'Cafe24Ssurround';
 }
 .g_ver02 .cont .info h4 {
     font-size: 20px;
@@ -387,7 +389,7 @@ header div a i {
 }
 .about .cont .info div p {
     font-size: 20px;
-    font-family: 'IM_Hyemin-Bold';
+    font-family: 'paybooc-Bold';
 }
 .about .cont .info div dl dt {
     font-size: 20px;
@@ -396,7 +398,7 @@ header div a i {
 }
 .about .cont .info div dl dd {
     font-size: 20px;
-    font-family: 'IM_Hyemin-Bold';
+    font-family: 'paybooc-Bold';
 }
 
 /* footer */
@@ -405,6 +407,9 @@ footer {
     text-align: center;
     color: #fff;
     padding: 100px 0;
+}
+footer h3 {
+    font-family: 'paybooc-Bold';
 }
 footer ul li {
     width: 250px;
